--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -19,7 +19,7 @@ How to declare dependency.
 <dependency>
 	<groupId>com.github.righettod</groupId>
 	<artifactId>hibernate-validator-security-contribs</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>${project.version}</version>
 </dependency>
 +--------------------------------------------------------------------------+
 
