--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -11,6 +11,8 @@ Project objective.
 	
 	{{{http://docs.jboss.org/hibernate/stable/validator/reference/en-US/html_single/#table-spec-constraints} Consult the list of existing annotations}}
 	
+[./images/CIP.png]
+	
 How to declare dependency.
 
 	Use this dependency definition into your "pom.xml":
